--- a/html/miscellaneous/C/Computer Science/index.html
+++ b/html/miscellaneous/C/Computer Science/index.html
@@ -63,6 +63,7 @@
             <li><a href = "../../../../html/miscellaneous/C/Cpp/index.html">C++</a></li>
             <li><a href = "../../../../html/miscellaneous/C/Cs/index.html">C#</a></li>
             <li><a href = "../../../../html/miscellaneous/C/Computer Science/index.html"class = "selected">Computer Science</a></li>
+            <li><a href = "../../../../html/miscellaneous/C/conferences/index.html">conferences</a></li>
 		</ul>
 
 
@@ -120,6 +121,13 @@
                 <b>Replit</b>:<a href = "https://replit.com/" target = "_blank">https://replit.com/</a> (online coding environment)
               </li>
 
+              <li>
+                <b>Master of Artificial Intelligence</b> (KU Leuven) :<a href = "https://www.kuleuven.be/programmes/master-artificial-intelligence" target = "_blank">ttps://www.kuleuven.be/</a> 
+            </li>
+              
+            <li>
+                <b>Master of Science in Applied informatics</b> (VUB) :<a href = "https://www.vub.be/en/studying-vub/all-study-programmes-vub/bachelors-and-masters-programmes-vub/applied-informatics" target = "_blank">https://www.vub.be/</a>
+            </li>
               
                 <li>
                     <a href = "../../../../html/miscellaneous/C/C/index.html">C</a>
