--- a/html/miscellaneous/C/Cs/index.html
+++ b/html/miscellaneous/C/Cs/index.html
@@ -64,6 +64,7 @@
             <li><a href = "../../../../html/miscellaneous/C/Cpp/index.html">C++</a></li>
             <li><a href = "../../../../html/miscellaneous/C/Cs/index.html"class = "selected">C#</a></li>
             <li><a href = "../../../../html/miscellaneous/C/Computer Science/index.html">Computer Science</a></li>
+            <li><a href = "../../../../html/miscellaneous/C/conferences/index.html">conferences</a></li>
 		</ul>
 
 
