--- a/html/miscellaneous/C/conferences/index.html
+++ b/html/miscellaneous/C/conferences/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US" xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>
-            C++
+            conferences
         </title>
         <meta charset="UTF-8" />
         <link rel="shortcut icon" href="../../../../img/PPJMHJ.ico" />
@@ -42,7 +42,7 @@
             <li><a href = "../../../../html/miscellaneous/K/index.html">K</a></li>
             <li><a href = "../../../../html/miscellaneous/L/index.html">L</a></li>
             <li><a href = "../../../../html/miscellaneous/M/index.html">M</a></li><br />
-            <li><a href = "../../../../html/miscellaneous/N/index.html">N</a></li>
+            <li><a href = "../../../../html/miscellaneous/N/index.html" >N</a></li>
             <li><a href = "../../../../html/miscellaneous/O/index.html">O</a></li>
             <li><a href = "../../../../html/miscellaneous/P/index.html">P</a></li>
             <li><a href = "../../../../html/miscellaneous/Q/index.html">Q</a></li>
@@ -60,22 +60,17 @@
 
 		<ul class="site_menu">            
             <li><a href = "../../../../html/miscellaneous/C/C/index.html">C</a></li>
-            <li><a href = "../../../../html/miscellaneous/C/Cpp/index.html"class = "selected">C++</a></li>
+            <li><a href = "../../../../html/miscellaneous/C/Cpp/index.html">C++</a></li>
             <li><a href = "../../../../html/miscellaneous/C/Cs/index.html">C#</a></li>
             <li><a href = "../../../../html/miscellaneous/C/Computer Science/index.html">Computer Science</a></li>
-            <li><a href = "../../../../html/miscellaneous/C/conferences/index.html">conferences</a></li>
+            <li><a href = "../../../../html/miscellaneous/C/conferences/index.html" class = "selected">conferences</a></li>
 		</ul>
 
 
-		<ul class="site_menu">            
-            <li><a href = "../../../../html/miscellaneous/C/Cpp/how_to.html">How to?</a></li>
-
-		</ul>
 
 
-        <h1 class = "big">C++</h1> 
-   
-        <h2 class = "big">Programming language</h2>
+        <h1 class = "big">Conferences</h1>
+        <h2 class = "big">& other meetings</h2>
   
 
         <div>
@@ -84,44 +79,11 @@
 
             <p>
 
-              <ul>
-
-                <li>
-                    <b>Tutorial on W3Schools</b>: <a href = "https://www.w3schools.com/cpp/" target = "_blank">https://www.w3schools.com/cpp/</a>
-                </li>
-
-                <li>
-                    <b>Tutorial on Zenva</b>: <a href = "https://academy.zenva.com/product-category/all/coding/c/" target = "_blank">https://academy.zenva.com</a>
-                </li>
-
-
-                <li>
-                    <b>C/C++ for Visual Studio Code</b>: <a href = "https://code.visualstudio.com/docs/languages/cpp" target = "_blank">https://code.visualstudio.com/</a> 
-                </li>
-
-                <li>
-                    <b>Using C++ on Linux in VS Code</b>: <a href = "https://code.visualstudio.com/docs/cpp/config-linux" target = "_blank">https://code.visualstudio.com/</a> (configure Visual Studio Code to use the GNU Compiler Collection (GCC) C++ compiler (g++) and GNU debugger (GDB))
-                </li>
-
-                <li>
-                    <b>Introductory Videos for C++</b>: <a href = "https://code.visualstudio.com/docs/cpp/introvideos-cpp" target = "_blank">https://code.visualstudio.com/</a> 
-                </li>
-
-
-                <li>
-                    <b>raylib</b>: <a href = "https://www.raylib.com/" target = "_blank">https://www.raylib.com/</a>  (simple and easy-to-use library to enjoy videogames programming)
-                </li>
-
-                <li>
-                    <b>raylib for Linux</b>: <a href = "https://github.com/raysan5/raylib/wiki/Working-on-GNU-Linux" target = "_blank">https://github.com/</a>  
-                </li>
-
-                <li>
-                    <b>GameDev.tv C++ course</b>: <a href = "https://gitlab.com/GameDevTV/CPPCourse" target = "_blank">https://gitlab.com/</a>  
-                </li>
-
+              <ul>  
                 
-
+                <li>
+                    <b>EMNLP</b>: <a href = "https://aclanthology.org/venues/emnlp/" target = "_blank">https://aclanthology.org/venues/emnlp/</a> (Conference on Empirical Methods in Natural Language Processing)
+                </li>
 
               </ul>
             
