--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </p>
 
 <p>
-    This website is updated regularly. I use it to organize my ideas and resources in a totally transparent way. On it, you'll find the <a href = "html/projects/index.html">projects</a> and <a href = "html/publications/index.html">publications</a> I took part in, the <a href = "html/events/index.html">events</a> in which I may have been involved, and the <a href = "html/institutions/index.html">institutions</a> that supported me in these endeavours. The <a href = "html/miscellaneous/index.html">miscellaneous</a> section contains an array of subjects that interest me or that pertain to me, and that I could not place in the other sections.
+    This website is updated regularly. I use it to organize my ideas and resources in a transparent and easily accessible way. On it, you'll find the <a href = "html/projects/index.html">projects</a> and <a href = "html/publications/index.html">publications</a> I took part in, the <a href = "html/events/index.html">events</a> in which I may have been involved, and the <a href = "html/institutions/index.html">institutions</a> that supported me in these endeavours. The <a href = "html/miscellaneous/index.html">miscellaneous</a> section contains an array of subjects that interest me or that pertain to me, and that I could not place in the other sections.
 </p>
 
 
@@ -66,7 +66,7 @@
 
 
 
-<br /><signature> — 9 December 2023</signature>
+<br /><signature> — 13 December 2023</signature>
         </div>
     </body>
 </html>
