--- a/html/miscellaneous/C/index.html
+++ b/html/miscellaneous/C/index.html
@@ -58,6 +58,7 @@
             <li><a href = "../../../html/miscellaneous/C/Cpp/index.html">C++</a></li>
             <li><a href = "../../../html/miscellaneous/C/Cs/index.html">C#</a></li>
             <li><a href = "../../../html/miscellaneous/C/Computer Science/index.html">Computer Science</a></li>
+            <li><a href = "../../../html/miscellaneous/C/conferences/index.html">conferences</a></li>
 		</ul>
 
         <h1 class = "big">C</h1>
