--- a/html/miscellaneous/G/graphs/index.html
+++ b/html/miscellaneous/G/graphs/index.html
@@ -63,7 +63,8 @@
             <li><a href = "../../../../html/miscellaneous/G/Gephi/index.html">Gephi</a></li>
             <li><a href = "../../../../html/miscellaneous/G/Git/index.html">Git</a></li>
             <li><a href = "../../../../html/miscellaneous/G/Go/index.html" >Go</a></li>
-            <li><a href = "../../../../html/miscellaneous/G/Graphs/index.html"class = "selected">Graphs</a></li>
+            <li><a href = "../../../../html/miscellaneous/G/Google/index.html" >Google</a></li>
+            <li><a href = "../../../../html/miscellaneous/G/graphs/index.html"class = "selected">graphs</a></li>
 		</ul>
 
 
