--- a/html/miscellaneous/G/index.html
+++ b/html/miscellaneous/G/index.html
@@ -58,7 +58,8 @@
             <li><a href = "../../../html/miscellaneous/G/Gephi/index.html">Gephi</a></li>
             <li><a href = "../../../html/miscellaneous/G/Git/index.html">Git</a></li>
             <li><a href = "../../../html/miscellaneous/G/Go/index.html">Go</a></li>
-            <li><a href = "../../../html/miscellaneous/G/Graphs/index.html">Graphs</a></li>
+            <li><a href = "../../../html/miscellaneous/G/Google/index.html">Google</a></li>
+            <li><a href = "../../../html/miscellaneous/G/graphs/index.html">graphs</a></li>
 		</ul>
 
         <h1 class = "big">G</h1>
