--- a/html/miscellaneous/G/Gephi/index.html
+++ b/html/miscellaneous/G/Gephi/index.html
@@ -62,7 +62,8 @@
             <li><a href = "../../../../html/miscellaneous/G/Gephi/index.html" class = "selected">Gephi</a></li>
             <li><a href = "../../../../html/miscellaneous/G/Git/index.html">Git</a></li>
             <li><a href = "../../../../html/miscellaneous/G/Go/index.html">Go</a></li>
-            <li><a href = "../../../../html/miscellaneous/G/Graphs/index.html">Graphs</a></li>
+            <li><a href = "../../../../html/miscellaneous/G/Google/index.html" >Google</a></li>
+            <li><a href = "../../../../html/miscellaneous/G/graphs/index.html">graphs</a></li>
 		</ul>
 
     <ul class="site_menu">
