--- a/html/miscellaneous/M/index.html
+++ b/html/miscellaneous/M/index.html
@@ -53,6 +53,7 @@
         </ul>
 
         <ul class="site_menu">
+            <li><a href = "../../../html/miscellaneous/M/mathematics/index.html">mathematics</a></li>
             <li><a href = "../../../html/miscellaneous/M/Memgraph/index.html">Memgraph</a></li>
         </ul>
 
@@ -61,7 +62,7 @@
         <div>
 
 
-            <br /><signature> — 21 October 2023</signature>
+            <br /><signature> — 29 December 2023</signature>
 
         </div>
 
