--- a/html/miscellaneous/S/SQL/index.html
+++ b/html/miscellaneous/S/SQL/index.html
@@ -61,6 +61,7 @@
 
 
 		<ul class="site_menu">
+            <li><a href = "../../../../html/miscellaneous/S/STEM/index.html">STEM</a></li>
             <li><a href = "../../../../html/miscellaneous/S/SQL/index.html" class = "selected">SQL</a></li>
 		</ul>
 
