--- a/html/miscellaneous/M/Memgraph/index.html
+++ b/html/miscellaneous/M/Memgraph/index.html
@@ -60,6 +60,7 @@
 
 
 		<ul class="site_menu">
+            <li><a href = "../../../../html/miscellaneous/M/mathematics/index.html">mathematics</a></li>
             <li><a href = "../../../../html/miscellaneous/M/Memgraph/index.html" class = "selected">Memgraph</a></li>
 		</ul>
 
