--- a/html/miscellaneous/S/index.html
+++ b/html/miscellaneous/S/index.html
@@ -56,6 +56,7 @@
 
 
         <ul class="site_menu">
+            <li><a href = "../../../html/miscellaneous/S/STEM/index.html">STEM</a></li>
             <li><a href = "../../../html/miscellaneous/S/SQL/index.html">SQL</a></li>
         </ul>
 
