--- a/html/miscellaneous/O/Odoo/index.html
+++ b/html/miscellaneous/O/Odoo/index.html
@@ -92,9 +92,30 @@
 
 
 <li>
-    <b>Documentation</b>: <a href = "https://www.odoo.com/documentation" target = "_blank">https://www.odoo.com/documentation</a>
+    On <b>YouTube</b>: <a href = "https://www.youtube.com/@Odoo" target = "_blank">https://www.youtube.com/@Odoo</a>
+</li>
 
-    
+
+
+
+<li>
+    <b>Playlist webinaires (FR)</b>: <a href = "https://www.youtube.com/watch?v=D1uPVjKWCf4&list=PL1-aSABtP6AA5-sJfa22SkLhb4yIihX6w" target = "_blank">https://www.youtube.com/</a>
+</li>
+
+<li>
+    <b>webinars (EN) Playlist</b>: <a href = "https://www.youtube.com/watch?v=rRI8HptEYv4&list=PL1-aSABtP6ACQ31opg84k9C0951aThI5W" target = "_blank">https://www.youtube.com/</a>
+</li>
+
+
+
+
+<li>
+    <b>Production</b>: <a href = "https://www.youtube.com/watch?v=kVXNOEy4SiA" target = "_blank">https://www.youtube.com/</a> (nouveautés dans Odoo 17)
+</li>
+
+
+<li>
+    <b>Documentation</b>: <a href = "https://www.odoo.com/documentation" target = "_blank">https://www.odoo.com/documentation</a>
 </li>
 
 <li>
