--- a/html/miscellaneous/V/Visual Studio Code/how_to.html
+++ b/html/miscellaneous/V/Visual Studio Code/how_to.html
@@ -61,6 +61,7 @@
 
 
 		<ul class="site_menu">
+            <li><a href = "../../../../html/miscellaneous/V/VBA/index.html">VBA</a></li>
             <li><a href = "../../../../html/miscellaneous/V/Visual Studio Code/index.html" class = "selected">VS Code</a></li>
 		</ul>
 
