--- a/html/miscellaneous/V/index.html
+++ b/html/miscellaneous/V/index.html
@@ -56,6 +56,7 @@
 
 
         <ul class="site_menu">
+            <li><a href = "../../../html/miscellaneous/V/VBA/index.html">VBA</a></li>
             <li><a href = "../../../html/miscellaneous/V/Visual Studio Code/index.html">VS Code</a></li>
         </ul>
 
@@ -64,7 +65,7 @@
         <div>
 
 
-            <br /><signature> — 16 September 2023</signature>
+            <br /><signature> — 18 January 2024</signature>
 
         </div>
 
