--- a/html/events/index.html
+++ b/html/events/index.html
@@ -60,7 +60,7 @@
                   <td>30 JAN 2024</td>
                   <td>30 JAN 2024</td>
                   <td>Brussels</td>
-                  <td>Speech entitled « Integrated Historical Database: usage et potentiel d'une base de données en graphe » (Integrated Historical Database: use and potential of a graph database) at the <a href = "../../html/institutions/Belgium/NICC/index.html">NICC</a> Seminar, <a href = "../../html/institutions/Belgium/NICC/index.html">NICC</a>, Brussels.</td>
+                  <td>Speech entitled «Integrated Historical Database: usage et potentiel d'une base de données en graphe» (Integrated Historical Database: use and potential of a graph database) at the <a href = "../../html/institutions/Belgium/NICC/index.html">NICC</a> Seminar, <a href = "../../html/institutions/Belgium/NICC/index.html">NICC</a>, Brussels.</td>
                   <td>Speaker</td>
                 </tr>
 
@@ -69,7 +69,7 @@
                   <td>07 FEV 2024</td>
                   <td>15 MAY 2024</td>
                   <td>Louvain-la-Neuve</td>
-                  <td>Course entitled « LECGE1215 - Informatique en Economie et Gestion » (Information Technology in Economics and Management), at <a href = "../../html/institutions/Belgium/UCLouvain/index.html">UCLouvain</a>
+                  <td>Course entitled «LECGE1215 - Informatique en Economie et Gestion» (Information Technology in Economics and Management), at <a href = "../../html/institutions/Belgium/UCLouvain/index.html">UCLouvain</a>.
                   
                     <br /><a href = "https://uclouvain.be/cours-2023-lecge1215" target = "_blank">https://uclouvain.be/cours-2023-lecge1215</a>
 
@@ -84,7 +84,7 @@
                   <td>26 MAR 2024</td>
                   <td>14 MAY 2024</td>
                   <td>Louvain-la-Neuve</td>
-                  <td>Course entitled « LLSMF2011 - Knowledge Management », at <a href = "../../html/institutions/Belgium/UCLouvain/index.html">UCLouvain</a>
+                  <td>Course entitled «LLSMF2011 - Knowledge Management», at <a href = "../../html/institutions/Belgium/UCLouvain/index.html">UCLouvain</a>.
                   
                     <br /><a href = "https://uclouvain.be/en-cours-2023-llsmf2011" target = "_blank">https://uclouvain.be/en-cours-2023-llsmf2011</a>
 
@@ -122,7 +122,7 @@
                     <td>18 SEP 2023</td>
                     <td>24 DEC 2023</td>
                     <td>Louvain-la-Neuve</td>
-                    <td>Course entitled « LINGE1225 - Programmation en Economie et Gestion » (Programming in Economics and Management), at <a href = "../../html/institutions/Belgium/UCLouvain/index.html">UCLouvain</a> 
+                    <td>Course entitled «LINGE1225 - Programmation en Economie et Gestion» (Programming in Economics and Management), at <a href = "../../html/institutions/Belgium/UCLouvain/index.html">UCLouvain</a>.
 
                       <br /><a href = "https://uclouvain.be/cours-2023-linge1225" target = "_blank">https://uclouvain.be/cours-2023-linge1225</a>
 
@@ -137,7 +137,7 @@
                     <td>17 NOV 2023</td>
                     <td>17 NOV 2023</td>
                     <td>Brussels</td>
-                    <td>Speech entitled « Integrated Historical Database (IHD). Méthodes, contenu, résultats. »  (Integrated Historical Database (IHD). Methods, content, results.) at a  <a href = "../../html/institutions/Belgium/NICC/CReCC.html">CReCC</a> research meeting, <a href = "../../html/institutions/Belgium/NICC/index.html">NICC</a>, Brussels.</td>
+                    <td>Speech entitled «Integrated Historical Database (IHD). Méthodes, contenu, résultats.»  (Integrated Historical Database (IHD). Methods, content, results.) at a  <a href = "../../html/institutions/Belgium/NICC/CReCC.html">CReCC</a> research meeting, <a href = "../../html/institutions/Belgium/NICC/index.html">NICC</a>, Brussels.</td>
                     <td>Speaker</td>
                   </tr>
   
@@ -148,7 +148,7 @@
                     <td>14 NOV 2023</td>
                     <td>14 NOV 2023</td>
                     <td>Brussels</td>
-                    <td>Speech entitled « Ontwikkeling en werking van een geïntegreerde historische database met behulp van grafen / Développement et exploitation d’une base de donnée historique intégrée au moyen de graphes » (Development and operation of a historical database integrated by way of graphs) at the Study day entitled « Recidive en criminele carrière: het digitale erfgoed van het strafrecht ten dienste van justitie actoren / Récidive et carrières criminelles : le patrimoine numérique de la justice pénale au service des acteurs de la justice » (Recidivism and criminal careers: the digital heritage of criminal justice at the service of justice professionals), Brussels.</td>
+                    <td>Speech entitled «Développement et exploitation d’une base de donnée historique intégrée au moyen de graphes» (Development and operation of a historical database integrated by way of graphs / Ontwikkeling en werking van een geïntegreerde historische database met behulp van grafen) at the Study day entitled «Récidive et carrières criminelles : le patrimoine numérique de la justice pénale au service des acteurs de la justice» (Recidivism and criminal careers: the digital heritage of criminal justice at the service of justice professionals / Recidive en criminele carrière: het digitale erfgoed van het strafrecht ten dienste van justitie actoren), Brussels.</td>
                     <td>Speaker</td>
                   </tr>
   
@@ -158,7 +158,7 @@
                     <td>18 SEP 2023</td>
                     <td>12 NOV 2023</td>
                     <td>Louvain-la-Neuve</td>
-                    <td>Course entitled « LLSMS2903 – Digital Transformation Management / LLSMF2903 – Digital Business Systems », at <a href = "../../html/institutions/Belgium/UCLouvain/index.html">UCLouvain</a>
+                    <td>Course entitled «LLSMS2903 – Digital Transformation Management / LLSMF2903 – Digital Business Systems», at <a href = "../../html/institutions/Belgium/UCLouvain/index.html">UCLouvain</a>.
                       <br /><a href = "https://uclouvain.be/en-cours-2023-llsms2903" target = "_blank">https://uclouvain.be/en-cours-2023-llsms2903</a>
 
                     </td>
