--- a/html/events/index.html
+++ b/html/events/index.html
@@ -81,6 +81,21 @@
 
                 <tr>
                   <td></td>
+                  <td>13 MAR 2024</td>
+                  <td>13 MAR 2024</td>
+                  <td>Brussels</td>
+                  <td>Conference entitled «Recidivism and Criminal Careers - Policy-Relevant Science», at the <a href = "../../html/institutions/Belgium/NICC/index.html">NICC</a>.
+                  
+                    <br /><a href = "../../html/projects/CReCC/2024/index.html">CReCC 2024</a>
+
+                  </td>
+                  <td>Co-promoter</td>
+                </tr>
+
+
+
+                <tr>
+                  <td></td>
                   <td>26 MAR 2024</td>
                   <td>14 MAY 2024</td>
                   <td>Louvain-la-Neuve</td>
