--- a/html/projects/PIES/results.html
+++ b/html/projects/PIES/results.html
@@ -31,7 +31,7 @@
         <ul class="site_menu">
             <li><a href = "../../../html/projects/Be-Gen/index.html">Be-Gen</a></li>
             <li><a href = "../../../html/projects/BE_Prum_ADN/index.html">BE Prüm ADN</a></li>
-            
+            <li><a href = "../../../html/projects/CReCC/index.html">CReCC</a></li>
             <li><a href = "../../../html/projects/DNA_cost/index.html">DNA cost</a></li>
             <li><a href = "../../../html/projects/DOT/index.html">DOT</a></li>
             <li><a href = "../../../html/projects/FAR/index.html">FAR</a></li>
@@ -46,8 +46,8 @@
 		<ul class="site_menu">
             <li><a href = "../../../html/projects/PIES/summary.html">Summary</a></li>
             <li><a href = "../../../html/projects/PIES/partners.html">Partners</a></li>
-            <li><a href = "../../../html/projects/PIES/workshop.html">Workshop</a></li>
-            <li><a href = "../../../html/projects/PIES/conference.html">Conference</a></li>
+            <li><a href = "../../../html/projects/PIES/2014/index.html">Workshop</a></li>
+            <li><a href = "../../../html/projects/PIES/2015/index.html">Conference</a></li>
             <li><a href = "../../../html/projects/PIES/results.html"class = "selected">Results</a></li>
             <li><a href = "../../../html/projects/PIES/publications.html">Publications</a></li>
 		</ul>
