--- a/html/projects/REGUIDE/index.html
+++ b/html/projects/REGUIDE/index.html
@@ -31,7 +31,7 @@
         <ul class="site_menu">
             <li><a href = "../../../html/projects/Be-Gen/index.html">Be-Gen</a></li>
             <li><a href = "../../../html/projects/BE_Prum_ADN/index.html">BE Prüm ADN</a></li>
-            
+            <li><a href = "../../../html/projects/CReCC/index.html">CReCC</a></li>
             <li><a href = "../../../html/projects/DNA_cost/index.html">DNA cost</a></li>
             <li><a href = "../../../html/projects/DOT/index.html">DOT</a></li>
             <li><a href = "../../../html/projects/FAR/index.html">FAR</a></li>
