--- a/html/miscellaneous/B/books/index.html
+++ b/html/miscellaneous/B/books/index.html
@@ -1750,6 +1750,21 @@ C++ Programming.
 </td></tr>
 
 
+<!-- --------------------------- -->
+
+<tr><td></td><td>
+    Numa Dhamani and Maggie Engler (2024). Introduction to Generative AI. An ethical, societal, and legal overview
+<a href = "https://www.manning.com/books/introduction-to-generative-ai" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Generative AI, Artificial Intelligence, Ethics, Sociology, Law.
+</td></tr>
+
+
+
+
+
+
 
 
 <!-- ------------ ------------ 2025 ------------ --------------- -->
@@ -1838,16 +1853,6 @@ Graphs, Knowledge Graphs, Machine Learning, Neo4j.
 Python, ChatGPIT, GitHub Copilot.
 </td></tr>
 
-<!-- --------------------------- -->
-
-<tr><td></td><td>
-    Numa Dhamani and Maggie Engler. Introduction to Generative AI. An ethical, societal, and legal overview
-<a href = "https://www.manning.com/books/introduction-to-generative-ai" target = "_blank">
-    https://www.manning.com/
-</a></td><td>
-Generative AI, Artificial Intelligence, Ethics, Sociology, Law.
-</td></tr>
-
 
 
 <!-- --------------------------- -->
@@ -1867,7 +1872,7 @@ Machine Learning, Large Language Models (LLMs), ChatGPT, Bard, LLAMA, Ray Tune, 
 
 </p>
 
-<br /><signature> — 24 October 2023</signature>
+<br /><signature> — 26 January 2024</signature>
 
 </div>
 
