--- a/html/miscellaneous/N/Neo4j/how_to.html
+++ b/html/miscellaneous/N/Neo4j/how_to.html
@@ -120,11 +120,24 @@
                 <li>
                     <b>Usage of apoc.cypher.run with params</b>: <a href = "https://stackoverflow.com/questions/70669371/what-is-the-proper-usage-of-apoc-cypher-run-with-params" target = "_blank">https://stackoverflow.com/</a> 
                 </li>
+
+
+
+                <li>
+                    <b>Introducing the New Neo4j Data Warehouse Connector</b>: <a href = "https://neo4j.com/developer-blog/introducing-neo4j-data-warehouse-connector/" target = "_blank">https://neo4j.com/developer-blog/</a> 
+                </li>
+
+
+                <li>
+                    <b>Data Consistency Models: ACID vs. BASE Explained</b>: <a href = "https://neo4j.com/blog/acid-vs-base-consistency-models-explained/" target = "_blank">https://neo4j.com/developer-blog/</a> 
+                </li>
+
+
               </ul>
             
             </p>
             
-            <br /><signature> — 28 November 2023</signature>
+            <br /><signature> — 31 January 2024</signature>
 
         </div>
 
