--- a/html/projects/PIES/summary.html
+++ b/html/projects/PIES/summary.html
@@ -36,7 +36,7 @@
             <li><a href = "../../../html/projects/DOT/index.html">DOT</a></li>
             <li><a href = "../../../html/projects/FAR/index.html">FAR</a></li>
             <li><a href = "../../../html/projects/IIHA/index.html">IIHA</a></li>
-            <li><a href = "../../../html/projects/MJ/index.html">MJ</a></li>
+            <li><a href = "../../../html/projects/MJ-RED/index.html">MJ-RED</a></li>
             <li><a href = "../../../html/projects/PIES/index.html"class = "selected">PIES</a></li><br />
             <li><a href = "../../../html/projects/REGUIDE/index.html">REGUIDE</a></li>
             <li><a href = "../../../html/projects/UBIMOL/index.html">UBIMOL</a></li>
