--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </p>  
 
 <p>
-    Research projects I am working on are <a href = "html/projects/FAR/index.html">FAR</a>, <a href = "html/projects/IIHA/index.html">IIHA</a>, <a href = "html/projects/REGUIDE/index.html">REGUIDE</a>, <a href = "html/projects/DOT/index.html">DOT</a>, and <a href = "html/projects/MJ/index.html">MJ</a>.
+    Research projects I am working on are <a href = "html/projects/FAR/index.html">FAR</a>, <a href = "html/projects/IIHA/index.html">IIHA</a>, <a href = "html/projects/REGUIDE/index.html">REGUIDE</a>, <a href = "html/projects/DOT/index.html">DOT</a>, and <a href = "html/projects/MJ-RED/index.html">MJ-RED</a>.
 </p>
 
 
@@ -66,7 +66,9 @@
 
 
 
-<br /><signature> — 13 December 2023</signature>
+<br /><signature> — 1 February 2024</signature>
+
+
         </div>
     </body>
 </html>
