--- a/html/miscellaneous/B/books/index.html
+++ b/html/miscellaneous/B/books/index.html
@@ -1568,6 +1568,11 @@ Science, Philosophy, Religion, Politics.
 Python Programming, Modeling, Simulation.
 </td></tr>
 
+
+
+
+
+
 <!-- --------------------------- -->
 <tr><td></td><td>
     Bradford Tuckfield (2023). Dive Into Data Science. Use Python to Tackle Your Toughest Business Challenges
@@ -1620,6 +1625,23 @@ R programming, Machine Learning, Geometry.
 </a></td><td>
 Graphs, Neural Networks, Graph Neural Network (GNN).
 </td></tr>
+
+
+
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Doug Farrell (2023). The Well-Grounded Python Developer. How the pros use Python and FlasK
+<a href = "https://www.manning.com/books/the-well-grounded-python-developer" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Programming, Python, Flask.
+</td></tr>
+
+
+
+
+
 
 <!-- --------------------------- -->
 <tr><td></td><td>
@@ -1727,6 +1749,42 @@ Data Science
 
 
 
+
+
+
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Vadim Smolyakov (2024). Machine Learning Algorithms in Depth
+<a href = "https://www.manning.com/books/machine-learning-algorithms-in-depth" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Machine learning, algorithms
+</td></tr>
+
+
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Luca Antiga, Eli Stevens, Howard Huang, Thomas Viehmann (2024). Deep Learning with PyTorch, Second Edition
+<a href = "https://www.manning.com/books/deep-learning-with-pytorch-second-edition" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Deep learning, Python, PyTorch, CNN, RNN, transformers, generative AI model.
+</td></tr>
+
+
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Hobson Lane, Maria Dyshel (2024). Natural Language Processing in Action. Second Edition
+<a href = "https://www.manning.com/books/natural-language-processing-in-action-second-edition" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Natural Language Processing, Python.
+</td></tr>
+
+
 <!-- --------------------------- -->
 <tr><td></td><td>
     Al Sweigart (2024). Automate the Boring Stuff with Python. Third Edition
@@ -1768,6 +1826,19 @@ Generative AI, Artificial Intelligence, Ethics, Sociology, Law.
 
 
 <!-- ------------ ------------ 2025 ------------ --------------- -->
+
+
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Sebastian Raschka (2025). Build a Large Language Model (From Scratch)
+<a href = "https://www.manning.com/books/build-a-large-language-model-from-scratch" target = "_blank">
+    https://www.manning.com/
+</a></td><td>
+Machine learning, Large Language Models (LLMs)
+</td></tr>
+
+
 
 <!-- --------------------------- -->
 <tr><td></td><td>
@@ -1872,7 +1943,7 @@ Machine Learning, Large Language Models (LLMs), ChatGPT, Bard, LLAMA, Ray Tune, 
 
 </p>
 
-<br /><signature> — 26 January 2024</signature>
+<br /><signature> — 11 February 2024</signature>
 
 </div>
 
