--- a/html/miscellaneous/R/Bertrand_Russell/Impact_of_Science.html
+++ b/html/miscellaneous/R/Bertrand_Russell/Impact_of_Science.html
@@ -70,7 +70,9 @@
 
 
 		<ul class="site_menu">
-            <li><a href = "../../../../html/miscellaneous/R/Bertrand_Russell/impact_of_science.html"class = "selected">Impact of Science</a></li>
+            <li><a href = "../../../../html/miscellaneous/R/Bertrand_Russell/Human_Society_in_Ethics_and_Politics.html">Human Society in Ethics & Politics</a></li>
+            
+            <li><a href = "../../../../html/miscellaneous/R/Bertrand_Russell/Impact_of_Science.html"class = "selected">Impact of Science</a></li>
         </ul>
         <h1 class = "big">The impact of science</h1>
 
@@ -141,7 +143,7 @@
 
 
 
-            <br /><signature> — 18 November 2023</signature>
+            <br /><signature> — 11 February 2024</signature>
 
         </div>
 
