--- a/html/miscellaneous/D/data/index.html
+++ b/html/miscellaneous/D/data/index.html
@@ -59,6 +59,7 @@
 
 		<ul class="site_menu">
             <li><a href = "../../../../html/miscellaneous/D/data/index.html" class = "selected">data</a></li>
+            <li><a href = "../../../../html/miscellaneous/D/diagrams/index.html">diagrams</a></li>
             <li><a href = "../../../../html/miscellaneous/D/Dutch/index.html">Dutch</a></li>
 		</ul>
 
