--- a/html/miscellaneous/D/diagrams/index.html
+++ b/html/miscellaneous/D/diagrams/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US" xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>
-            Data
+            diagrams
         </title>
         <meta charset="UTF-8" />
         <link rel="shortcut icon" href="../../../../img/PPJMHJ.ico" />
@@ -59,14 +59,12 @@
 
 		<ul class="site_menu">
             <li><a href = "../../../../html/miscellaneous/D/data/index.html">data</a></li>
-            <li><a href = "../../../../html/miscellaneous/D/diagrams/index.html">diagrams</a></li>
-            <li><a href = "../../../../html/miscellaneous/D/Dutch/index.html" class = "selected">Dutch</a></li>
+            <li><a href = "../../../../html/miscellaneous/D/diagrams/index.html"class = "selected">diagrams</a></li>
+            <li><a href = "../../../../html/miscellaneous/D/Dutch/index.html">Dutch</a></li>
 		</ul>
 
 
-        <h1 class = "big">Dutch</h1>
-        <h2 class = "big">Nederlands</h2>
-        <h3 class = "big">Néerlandais</h3>
+        <h1 class = "big">Diagrams</h1>
 
         <div>
 
@@ -75,19 +73,27 @@
             <p>
                 <ul>
                     <li>
-                        <b>Huis van het Nederlands</b>: <a href = "https://www.huisnederlandsbrussel.be/" target = "_blank">https://www.huisnederlandsbrussel.be/</a>
+                        <b>draw.io</b>: <a href = "https://app.diagrams.net/" target = "_blank">https://app.diagrams.net/</a> 
+
+                        <ul>
+                            <li><a href = "https://github.com/jgraph/drawio/" target = "_blank">https://github.com/jgraph/drawio/</a></li>
+                        </ul>
                     </li>
 
                     <li>
-                        <b>Het Kruispunt</b>: <a href = "https://hetkruispunt258967713.wordpress.com/" target = "_blank">https://hetkruispunt258967713.wordpress.com/</a>
+                        <b>arrows.app</b>: <a href = "https://arrows.app" target = "_blank">https://arrows.app</a>
                     </li>
 
+
+                    <li>
+                        <b>yFiles</b>: <a href = "../../../../html/miscellaneous/Y/yFiles/index.html"" target = "_blank">yFiles</a>
+                    </li>
                 </ul>
 
                 
             </p>
             
-            <br /><signature> — 11 December 2023</signature>
+            <br /><signature> — 13 February 2024</signature>
 
         </div>
 
