--- a/html/miscellaneous/D/index.html
+++ b/html/miscellaneous/D/index.html
@@ -55,6 +55,7 @@
 
         <ul class="site_menu">
             <li><a href = "../../../html/miscellaneous/D/data/index.html">data</a></li>
+            <li><a href = "../../../html/miscellaneous/D/diagrams/index.html">diagrams</a></li>
             <li><a href = "../../../html/miscellaneous/D/Dutch/index.html">Dutch</a></li>
 		</ul>
 
