--- a/html/miscellaneous/R/Bertrand_Russell/Human_Society_in_Ethics_and_Politics.html
+++ b/html/miscellaneous/R/Bertrand_Russell/Human_Society_in_Ethics_and_Politics.html
@@ -70,9 +70,11 @@
 
 
 		<ul class="site_menu">
-            <li><a href = "../../../../html/miscellaneous/R/Bertrand_Russell/Human_Society_in_Ethics_and_Politics.html"class = "selected">Human Society in Ethics & Politics</a></li>
             
-            <li><a href = "../../../../html/miscellaneous/R/Bertrand_Russell/Impact_of_Science.html">Impact of Science</a></li>
+            <li><a href = "../../../../html/miscellaneous/R/Bertrand_Russell/Impact_of_Science.html">IS 52</a></li>
+
+            <li><a href = "../../../../html/miscellaneous/R/Bertrand_Russell/Human_Society_in_Ethics_and_Politics.html"class = "selected">HSEP 54</a></li>
+            
         </ul>
         <h1 class = "big">Human Society in Ethics and Politics</h1>
 
