--- a/html/miscellaneous/R/Bertrand_Russell/Impact_of_Science.html
+++ b/html/miscellaneous/R/Bertrand_Russell/Impact_of_Science.html
@@ -70,9 +70,10 @@
 
 
 		<ul class="site_menu">
-            <li><a href = "../../../../html/miscellaneous/R/Bertrand_Russell/Human_Society_in_Ethics_and_Politics.html">Human Society in Ethics & Politics</a></li>
+            <li><a href = "../../../../html/miscellaneous/R/Bertrand_Russell/Impact_of_Science.html"class = "selected">IS 52</a></li>
             
-            <li><a href = "../../../../html/miscellaneous/R/Bertrand_Russell/Impact_of_Science.html"class = "selected">Impact of Science</a></li>
+            <li><a href = "../../../../html/miscellaneous/R/Bertrand_Russell/Human_Society_in_Ethics_and_Politics.html">HSEP 54</a></li>
+            
         </ul>
         <h1 class = "big">The impact of science</h1>
 
