--- a/html/miscellaneous/F/index.html
+++ b/html/miscellaneous/F/index.html
@@ -53,13 +53,17 @@
             <li><a href = "../../../html/miscellaneous/Z/index.html">Z</a></li>
 		</ul>
 
+        <ul class="site_menu">
+            <li><a href = "../../../html/miscellaneous/F/Firefox/index.html">Firefox</a></li>
+
+		</ul>
 
         <h1 class = "big">F</h1>
 
         <div>
 
 
-            <br /><signature> — 16 September 2023</signature>
+            <br /><signature> — 19 February 2024</signature>
 
         </div>
 
