--- a/html/miscellaneous/C/Computer Science/index.html
+++ b/html/miscellaneous/C/Computer Science/index.html
@@ -62,13 +62,14 @@
             <li><a href = "../../../../html/miscellaneous/C/C/index.html">C</a></li>
             <li><a href = "../../../../html/miscellaneous/C/Cpp/index.html">C++</a></li>
             <li><a href = "../../../../html/miscellaneous/C/Cs/index.html">C#</a></li>
+            <li><a href = "../../../../html/miscellaneous/C/Chinese/index.html" class = "selected">Chinese</a></li>
             <li><a href = "../../../../html/miscellaneous/C/Computer Science/index.html"class = "selected">Computer Science</a></li>
             <li><a href = "../../../../html/miscellaneous/C/conferences/index.html">conferences</a></li>
 		</ul>
 
 
 
-
+  
         <h1 class = "big">Computer Science</h1>
         <h2 class = "big">Concepts, Software, Hardware</h2>
   
