--- a/html/miscellaneous/C/conferences/index.html
+++ b/html/miscellaneous/C/conferences/index.html
@@ -62,6 +62,7 @@
             <li><a href = "../../../../html/miscellaneous/C/C/index.html">C</a></li>
             <li><a href = "../../../../html/miscellaneous/C/Cpp/index.html">C++</a></li>
             <li><a href = "../../../../html/miscellaneous/C/Cs/index.html">C#</a></li>
+            <li><a href = "../../../../html/miscellaneous/C/Chinese/index.html">Chinese</a></li>
             <li><a href = "../../../../html/miscellaneous/C/Computer Science/index.html">Computer Science</a></li>
             <li><a href = "../../../../html/miscellaneous/C/conferences/index.html" class = "selected">conferences</a></li>
 		</ul>
