--- a/html/miscellaneous/L/LaTeX/how_to.html
+++ b/html/miscellaneous/L/LaTeX/how_to.html
@@ -100,6 +100,10 @@
                     <b>Display the difference between a date and today</b> <a href = "https://tex.stackexchange.com/questions/14518/difference-between-two-dates" target = "_blank">https://tex.stackexchange.com</a>
                  </li>
   
+                 <li>
+                    <b>XeLaTeX</b> <a href = "https://www.overleaf.com/learn/latex/XeLaTeX" target = "_blank">https://www.overleaf.com/</a>
+                 </li>
+  
               </ul>
             
             </p>
