--- a/html/miscellaneous/N/Neo4j/how_to.html
+++ b/html/miscellaneous/N/Neo4j/how_to.html
@@ -133,11 +133,20 @@
                 </li>
 
 
+                <li>
+                    <b>PyNeoInstance: A User-Friendly Python Library for Neo4j</b>: <a href = "https://neo4j.com/developer-blog/pyneoinstance-python-library-neo4j/" target = "_blank">https://neo4j.com/developer-blog/</a> 
+                </li>
+
+
+
+                <li>
+                    <b>Neo4j multiple optional match query very slow</b>: <a href = "https://stackoverflow.com/questions/39797419/neo4j-multiple-optional-match-query-very-slow/" target = "_blank">https://stackoverflow.com/q</a> 
+                </li>
               </ul>
             
             </p>
             
-            <br /><signature> — 31 January 2024</signature>
+            <br /><signature> — 11 March 2024</signature>
 
         </div>
 
