--- a/index.html
+++ b/index.html
@@ -40,22 +40,8 @@
     I have been a researcher at <a href = "html/institutions/Belgium/UCLouvain/index.html">UCLouvain</a>, <a href = "html/institutions/Belgium/KULeuven/index.html">KU Leuven</a>, <a href = "html/institutions/USA/UofM/index.html">University of Memphis</a>, <a href = "html/institutions/Canada/ULaval/index.html">Laval University</a>, and <a href = "html/institutions/Italy/UniPi/index.html">University of Pisa</a>. At the moment I am a researcher at the National Institute for Criminalistics and Criminology (<a href = "html/institutions/Belgium/NICC/index.html">NICC</a>), and a teaching assistant at <a href = "html/institutions/Belgium/UCLouvain/index.html">UCLouvain</a>.
 </p>
 
-
 <p>
-    I am the designer and developer of the <a href = "html/miscellaneous/I/IHD/index.html">Integrated Historical Database (IHD)</a>, a computer system created to facilitate the preservation and exploitation of datasets extracted from different sources.
-</p>  
-
-<p>
-    Research projects I am working on are <a href = "html/projects/FAR/index.html">FAR</a>, <a href = "html/projects/IIHA/index.html">IIHA</a>, <a href = "html/projects/REGUIDE/index.html">REGUIDE</a>, <a href = "html/projects/DOT/index.html">DOT</a>, and <a href = "html/projects/MJ-RED/index.html">MJ-RED</a>.
-</p>
-
-
-<p>
-    In general, I am interested by science and humanities, and in doing so I rely a lot on <a href = "html/miscellaneous/C/Computer Science/index.html">computers</a>. Topics of particular interests to me are <a href = "html/miscellaneous/P/Python/index.html">Python</a> programming and <a href = "html/miscellaneous/G/Graphs/index.html">graphs</a>. I love reflecting on ideas and reading <a href = "html/miscellaneous/B/books/index.html">books</a>, and I developed a passion for the work of several authors (e.g., <a href = "html/miscellaneous/E/Erasmus/index.html">Erasmus</a>, <a href = "html/miscellaneous/R/Bertrand_Russell/index.html">Bertrand Russell</a>).
-</p>
-
-<p>
-    This website is updated regularly. I use it to organize my ideas and resources in a transparent and easily accessible way. On it, you'll find the <a href = "html/projects/index.html">projects</a> and <a href = "html/publications/index.html">publications</a> I took part in, the <a href = "html/events/index.html">events</a> in which I may have been involved, and the <a href = "html/institutions/index.html">institutions</a> that supported me in these endeavours. The <a href = "html/miscellaneous/index.html">miscellaneous</a> section contains an array of subjects that interest me or that pertain to me, and that I could not place in the other sections.
+    This website used to organize some ideas and resources in a transparent and easily accessible way. On it, you'll find the <a href = "html/projects/index.html">projects</a> and <a href = "html/publications/index.html">publications</a> I took part in, the <a href = "html/events/index.html">events</a> in which I may have been involved, and the <a href = "html/institutions/index.html">institutions</a> that supported me in these endeavours. The <a href = "html/miscellaneous/index.html">miscellaneous</a> section contains an array of subjects that interest me or that pertain to me, and that I could not place in the other sections.
 </p>
 
 
@@ -66,7 +52,7 @@
 
 
 
-<br /><signature> — 1 February 2024</signature>
+<br /><signature> — 7 October 2024</signature>
 
 
         </div>
