--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </p>
 
 <p>
-    This website used to organize some ideas and resources in a transparent and easily accessible way. On it, you'll find the <a href = "html/projects/index.html">projects</a> and <a href = "html/publications/index.html">publications</a> I took part in, the <a href = "html/events/index.html">events</a> in which I may have been involved, and the <a href = "html/institutions/index.html">institutions</a> that supported me in these endeavours. The <a href = "html/miscellaneous/index.html">miscellaneous</a> section contains an array of subjects that interest me or that pertain to me, and that I could not place in the other sections.
+    This website is used to organize some ideas and resources in a transparent and easily accessible way. On it, you'll find the <a href = "html/projects/index.html">projects</a> and <a href = "html/publications/index.html">publications</a> I took part in, the <a href = "html/events/index.html">events</a> in which I may have been involved, and the <a href = "html/institutions/index.html">institutions</a> that supported me in these endeavours. The <a href = "html/miscellaneous/index.html">miscellaneous</a> section contains an array of subjects that interest me or that pertain to me, and that I could not place in the other sections.
 </p>
 
 
@@ -52,7 +52,7 @@
 
 
 
-<br /><signature> — 7 October 2024</signature>
+<br /><signature> — 16 October 2024</signature>
 
 
         </div>
